# KHOA_COMPONENTS

./: .gitignore  CMakeLists.txt  build_log.txt  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
components/khoa_ota_update/: CMakeLists.txt  README.md  idf_component.yml  ota_boot.cc  ota_common.h  ota_core.cc  ota_download.cc  ota_manager.cc  ota_token.cc  ota_version.cc
components/khoa_ota_update/include/: ota_manager.h
components/khoa_wifi_connect/: CMakeLists.txt  LICENSE  README.md  idf_component.yml  wifi_configuration_ap.cc  wifi_manager.cc
components/khoa_wifi_connect/assets/: wifi_configuration.html  wifi_configuration_done.html
components/khoa_wifi_connect/include/: wifi_configuration_ap.h  wifi_manager.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
partitions/: partitions_esp32_4MB.csv  partitions_esp32c3_4MB.csv  partitions_esp32c5_4MB.csv  partitions_esp32c6_4MB.csv  partitions_esp32p4_16MB.csv  partitions_esp32s3_16MB.csv
tools/docker/: Dockerfile  README.md  docker-compose.yml
tools/docker/app/: __init__.py  config.py  devices.py  main.py  utils.py
tools/docker/app/routes/: __init__.py  admin.py  dashboard.py  ota.py
tools/docker/firmware/: .gitkeep
tools/docker/static/: app.js  style.css
tools/docker/templates/: index.html
tools/serverOTA/: .dockerignore  Dockerfile  docker-compose.yml  requirements.txt
tools/serverOTA/app/: config.py  devices.py  main.py  utils.py
tools/serverOTA/static/: app.js  style.css
tools/serverOTA/templates/: index.html
(+3 files in other folders)
